--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title>Peer</title>
-  <script src="https://unpkg.com/peerjs@1.0.0/dist/peerjs.min.js"></script>
+  <!--script src="https://unpkg.com/peerjs@1.0.0/dist/peerjs.min.js"></script-->
+  <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
 </head>
 
 <body>
@@ -17,6 +18,7 @@
   <video id=myVideo muted="muted" width="400px" height="auto"></video>
   <div id=callinfo></div>
   <video id=remVideo width="400px" height="auto"></video>
+
   <script>
     var callOptions = {
       'iceServers': [
@@ -56,7 +58,7 @@
         }
       ]
     };
-    peer = new Peer({ config: callOptions });
+    var peer = new Peer({ config: callOptions });
     peer.on('open', function (peerID) {
       document.getElementById('myid').innerHTML = peerID;
     });
