--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <p>
-  <h3>Мой ID: </h3><span id=myid></span></p>
+  <h3>ID: <span id=myid></span></h3></p>
   <input id=otherPeerId type=text placeholder="otherPeerId"> <button
     onclick="callToNode(document.getElementById('otherPeerId').value)">Вызов</button>
 
