--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<!--
   <p>
   <h3>ID: <span id=myid></span></h3></p>
   <input id=otherPeerId type=text placeholder="otherPeerId">
@@ -114,5 +115,54 @@
         };
       }).catch(function (err) { console.log(err.name + ": " + err.message); });
     }
+  </script>
+-->
+  <div id="peer-id">Id: </div>
+
+  <script>
+    var callOptions = {
+      'iceServers': [
+        { url: 'stun:stun01.sipphone.com' },
+        { url: 'stun:stun.ekiga.net' },
+        { url: 'stun:stun.fwdnet.net' },
+        { url: 'stun:stun.ideasip.com' },
+        { url: 'stun:stun.iptel.org' },
+        { url: 'stun:stun.rixtelecom.se' },
+        { url: 'stun:stun.schlund.de' },
+        { url: 'stun:stun.l.google.com:19302' },
+        { url: 'stun:stun1.l.google.com:19302' },
+        { url: 'stun:stun2.l.google.com:19302' },
+        { url: 'stun:stun3.l.google.com:19302' },
+        { url: 'stun:stun4.l.google.com:19302' },
+        { url: 'stun:stunserver.org' },
+        { url: 'stun:stun.softjoys.com' },
+        { url: 'stun:stun.voiparound.com' },
+        { url: 'stun:stun.voipbuster.com' },
+        { url: 'stun:stun.voipstunt.com' },
+        { url: 'stun:stun.voxgratia.org' },
+        { url: 'stun:stun.xten.com' },
+        {
+          url: 'turn:numb.viagenie.ca',
+          credential: 'muazkh',
+          username: 'webrtc@live.com'
+        },
+        {
+          url: 'turn:192.158.29.39:3478?transport=udp',
+          credential: 'JZEOEt2V3Qb0y27GRntt2u2PAYA=',
+          username: '28224511:1379330808'
+        },
+        {
+          url: 'turn:192.158.29.39:3478?transport=tcp',
+          credential: 'JZEOEt2V3Qb0y27GRntt2u2PAYA=',
+          username: '28224511:1379330808'
+        }
+      ]
+    };
+
+    var peer = new Peer({ config: callOptions });
+    peer.on('open', function (peerId) {
+      document.getElementById('peer-id').innerHTML += peerId
+    });
+
   </script>
 </body>
