--- a/index1.html
+++ b/index1.html
@@ -13,7 +13,7 @@
     <button id="btn-connect">Connect</button>
   </div>
   <video id="player"></video>
-  <div id="log-infov"></div>
+  <div id="log-info"></div>
   <div id="log-error">Errors:</div>
 
   <script>
