--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <title>Peer</title>
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+  <script>window.onerror = alert;</script>
 </head>
 
 <body>
@@ -68,7 +69,7 @@
         call.answer();
         call.on('stream', function (stream) {
           document.getElementById('player').srcObject = stream;
-        })
+        });
       });
     });
 
