--- a/index1.html
+++ b/index1.html
@@ -19,6 +19,7 @@
   <div id="log-error">Errors:</div>
 
   <script>
+    alert(5);
     var callOptions = {
       'iceServers': [
         { url: 'stun:stun01.sipphone.com' },
