--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <video id=remVideo width="400px" height="auto"></video>
 
   <script>
-    alert(2);
+    alert(3);
     var callOptions = {
       'iceServers': [
         { url: 'stun:stun01.sipphone.com' },
@@ -99,7 +99,7 @@
     function callToNode(peerId) { //вызов
       navigator.mediaDevices.getUserMedia({ audio: true, video: true }).then(function (mediaStream) {
         var video = document.getElementById('myVideo');
-        peercall = peer.call(peerId, mediaStream);
+        peercall = peer.call(peerId/*, mediaStream*/);
         peercall.on('stream', function (stream) { //нам ответили, получим стрим
           // setTimeout(function () {
           //   document.getElementById('remVideo').srcObject = peercall.remoteStream;
