--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <video id=remVideo width="400px" height="auto" autoplay></video>
 
   <script>
-    alert(5);
+    alert(6);
     var callOptions = {
       'iceServers': [
         { url: 'stun:stun01.sipphone.com' },
@@ -70,30 +70,31 @@
     peer.on('call', function (call) {
       // Answer the call, providing our mediaStream
       peercall = call;
-      document.getElementById('callinfo').innerHTML = "Входящий звонок <button onclick='callanswer()' >Принять</button><button onclick='callcancel()' >Отклонить</button>";
+      // document.getElementById('callinfo').innerHTML = "Входящий звонок <button onclick='callanswer()' >Принять</button><button onclick='callcancel()' >Отклонить</button>";
+      callanswer();
     });
 
     function callanswer() {
-      navigator.mediaDevices.getUserMedia({ audio: true, video: true }).then(function (mediaStream) {
-        var video = document.getElementById('myVideo');
+      // navigator.mediaDevices.getUserMedia({ audio: true, video: true }).then(function (mediaStream) {
+        // var video = document.getElementById('myVideo');
         peercall.answer(/*mediaStream*/); // отвечаем на звонок и передаем свой медиапоток собеседнику
         //peercall.on ('close', onCallClose); //можно обработать закрытие-обрыв звонка
-        video.srcObject = mediaStream; //помещаем собственный медиапоток в объект видео (чтоб видеть себя)
-        document.getElementById('callinfo').innerHTML = "Звонок начат... <button onclick='callclose()' >Завершить звонок</button>"; //информируем, что звонок начат, и выводим кнопку Завершить
-        video.onloadedmetadata = function (e) {//запускаем воспроизведение, когда объект загружен
-          video.play();
-        };
-        setTimeout(function () {
-          //входящий стрим помещаем в объект видео для отображения
-          document.getElementById('remVideo').srcObject = peercall.remoteStream;
-          document.getElementById('remVideo').onloadedmetadata = function (e) {
-            // и запускаем воспроизведение когда объект загружен
-            document.getElementById('remVideo').play();
-          };
-        }, 1500);
+        // video.srcObject = mediaStream; //помещаем собственный медиапоток в объект видео (чтоб видеть себя)
+        // document.getElementById('callinfo').innerHTML = "Звонок начат... <button onclick='callclose()' >Завершить звонок</button>"; //информируем, что звонок начат, и выводим кнопку Завершить
+        // video.onloadedmetadata = function (e) {//запускаем воспроизведение, когда объект загружен
+        //   video.play();
+        // };
+        // setTimeout(function () {
+        //   //входящий стрим помещаем в объект видео для отображения
+        //   document.getElementById('remVideo').srcObject = peercall.remoteStream;
+        //   document.getElementById('remVideo').onloadedmetadata = function (e) {
+        //     // и запускаем воспроизведение когда объект загружен
+        //     document.getElementById('remVideo').play();
+        //   };
+        // }, 1500);
 
 
-      }).catch(function (err) { console.log(err.name + ": " + err.message); });
+      // }).catch(function (err) { console.log(err.name + ": " + err.message); });
     }
 
     function callToNode(peerId) { //вызов
