--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <br>
   <video id=myVideo muted="muted" width="400px" height="auto" autoplay></video>
   <div id=callinfo></div>
-  <video id=remVideo width="400px" height="auto" autoplay></video>
+  <video id=remVideo width="400px" height="auto" autoplay controls></video>
 
   <script>
-    alert(8);
+    alert(9);
     var callOptions = {
       'iceServers': [
         { url: 'stun:stun01.sipphone.com' },
