--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
 <body>
   <p>
-  <h3>ID: <span id=myid></span></h3></p>
-  <input id=otherPeerId type=text placeholder="otherPeerId">
-  <button onclick="callToNode(document.getElementById('otherPeerId').value)">Вызов</button>
+  <h3>ID: <span id="myid"></span></h3>
+  </p>
+  <input id="otherPeerId" type="text" placeholder="otherPeerId">
+  <button id="btn-call">Вызов</button>
 
   <br>
   <video id=myVideo muted="muted" width="400px" height="auto" autoplay style="display: none;" controls></video>
@@ -20,7 +21,7 @@
   <video id=remVideo width="400px" height="auto" autoplay controls style="display: none;"></video>
 
   <script>
-    alert(10);
+    alert(11);
     var callOptions = {
       'iceServers': [
         { url: 'stun:stun01.sipphone.com' },
@@ -68,56 +69,31 @@
 
     var peercall;
     peer.on('call', function (call) {
-      // Answer the call, providing our mediaStream
       peercall = call;
-      // document.getElementById('callinfo').innerHTML = "Входящий звонок <button onclick='callanswer()' >Принять</button><button onclick='callcancel()' >Отклонить</button>";
       callanswer();
-    });
-
-    function callanswer() {
-      // navigator.mediaDevices.getUserMedia({ audio: true, video: true }).then(function (mediaStream) {
-        var video = document.getElementById('myVideo');
-        peercall.answer(/*mediaStream*/); // отвечаем на звонок и передаем свой медиапоток собеседнику
-        //peercall.on ('close', onCallClose); //можно обработать закрытие-обрыв звонка
-        // video.srcObject = mediaStream; //помещаем собственный медиапоток в объект видео (чтоб видеть себя)
-        // document.getElementById('callinfo').innerHTML = "Звонок начат... <button onclick='callclose()' >Завершить звонок</button>"; //информируем, что звонок начат, и выводим кнопку Завершить
-        // video.onloadedmetadata = function (e) {//запускаем воспроизведение, когда объект загружен
-        //   video.play();
-        // };
-        console.log('%c callanswer ', 'background: black; color: white;');
-        setTimeout(function () {
-        //   //входящий стрим помещаем в объект видео для отображения
-          document.getElementById('remVideo').srcObject = peercall.remoteStream;
-          document.getElementById('remVideo').onloadedmetadata = function (e) {
-            // и запускаем воспроизведение когда объект загружен
-            document.getElementById('remVideo').play();
-            document.getElementById('remVideo').style.display = 'block;';
-          };
-        }, 1500);
-
-
-      // }).catch(function (err) { console.log(err.name + ": " + err.message); });
-    }
-
-    function callToNode(peerId) { //вызов
-      navigator.mediaDevices.getUserMedia({ audio: true, video: true }).then(function (mediaStream) {
-        var video = document.getElementById('myVideo');
-        peercall = peer.call(peerId, mediaStream);
-        // peercall.on('stream', function (stream) { //нам ответили, получим стрим
-        //   setTimeout(function () {
-        //     document.getElementById('remVideo').srcObject = peercall.remoteStream;
-        //     document.getElementById('remVideo').onloadedmetadata = function (e) {
-        //       document.getElementById('remVideo').play();
-        //     };
-        //   }, 1500);
-        // });
-        //  peercall.on('close', onCallClose);				  
-        video.srcObject = mediaStream;
+      peercall.answer();
+      setTimeout(function () {
+        var video = document.getElementById('remVideo');
+        video.srcObject = peercall.remoteStream;
         video.onloadedmetadata = function (e) {
           video.play();
           video.style.display = 'block';
         };
-      }).catch(function (err) { console.log(err.name + ": " + err.message); });
-    }
+      }, 1500);
+    });
+
+    document.getElementById('btn-call').addEventListener('click', function callToNode() {
+      var peerId = document.getElementById('otherPeerId').value;
+      navigator.mediaDevices.getUserMedia({ audio: true, video: true })
+        .then(function (mediaStream) {
+          var video = document.getElementById('myVideo');
+          peercall = peer.call(peerId, mediaStream);
+          video.srcObject = mediaStream;
+          video.onloadedmetadata = function (e) {
+            video.play();
+            video.style.display = 'block';
+          };
+        }).catch(function (err) { console.log(err.name + ": " + err.message); });
+    });
   </script>
 </body>
