--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8" />
   <title>Peer</title>
-  <!--script src="https://unpkg.com/peerjs@1.0.0/dist/peerjs.min.js"></script-->
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
 </head>
 
@@ -21,7 +20,6 @@
   <video id=remVideo width="400px" height="auto" autoplay controls style="display: none;"></video>
 
   <script>
-    alert(12);
     var callOptions = {
       'iceServers': [
         { url: 'stun:stun01.sipphone.com' },
@@ -92,7 +90,9 @@
             video.play();
             video.style.display = 'block';
           };
-        }).catch(function (err) { console.log(err.name + ": " + err.message); });
+        }).catch(function (err) {
+          console.log(err.name + ": " + err.message);
+        });
     });
   </script>
 </body>
