--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <video id=remVideo width="400px" height="auto" autoplay controls style="display: none;"></video>
 
   <script>
+    alert(1);
     var callOptions = {
       'iceServers': [
         { url: 'stun:stun01.sipphone.com' },
