--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <h1>Консультант</h1>
   <p>
   <h3>ID: <span id="myid"></span></h3>
   </p>
@@ -20,7 +21,6 @@
   <video id=remVideo width="400px" height="auto" autoplay controls style="display: none;"></video>
 
   <script>
-    alert(1);
     var callOptions = {
       'iceServers': [
         { url: 'stun:stun01.sipphone.com' },
