--- a/client.html
+++ b/client.html
@@ -30,11 +30,12 @@
         <button id="btn-copy">Копировать id</button>
     </div>
     <div class="video-container">
-        <video id="video" controls autoplay></video>
+        <video id="video" controls autoplay muted></video>
     </div>
 
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script>
+        alert(1);
         (function () {
             var clientIdContainer = document.getElementById('client-id');
             var btnCopyId = document.getElementById('btn-copy');
