--- a/client.html
+++ b/client.html
@@ -32,13 +32,15 @@
     <div class="video-container">
         <video id="video" controls autoplay muted></video>
     </div>
+    <button id="answer">Принять</button>
 
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script>
-        alert(1);
+        alert(2);
         (function () {
             var clientIdContainer = document.getElementById('client-id');
             var btnCopyId = document.getElementById('btn-copy');
+            var answer = document.getElementById('answer');
             var id;
             var callOptions = {
                 'iceServers': [
@@ -92,6 +94,10 @@
                     var video = document.getElementById('video');
                     video.srcObject = call.remoteStream;
                 });
+            });
+
+            answer.addEventListener('click', function () {
+                document.getElementById('video').play();
             });
 
             btnCopyId.addEventListener('click', function () {
