--- a/client.html
+++ b/client.html
@@ -36,7 +36,7 @@
 
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script>
-        alert(3);
+        alert(4);
         (function () {
             var clientIdContainer = document.getElementById('client-id');
             var btnCopyId = document.getElementById('btn-copy');
@@ -91,10 +91,19 @@
             peer.on('call', function (call) {
                 alert('call');
                 call.answer();
+                // setTimeout(function () {
+                //     var video = document.getElementById('video');
+                //     video.srcObject = call.remoteStream;
+                // });
                 setTimeout(function () {
+                    //входящий стрим помещаем в объект видео для отображения
                     var video = document.getElementById('video');
-                    video.srcObject = call.remoteStream;
-                });
+                    video.srcObject = peercall.remoteStream;
+                    video.onloadedmetadata = function (e) {
+                        // и запускаем воспроизведение когда объект загружен
+                        video.play();
+                    };
+                }, 1500);
             });
 
             answer.addEventListener('click', function () {
