--- a/client.html
+++ b/client.html
@@ -36,7 +36,7 @@
 
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script>
-        alert(4);
+        alert(5);
         (function () {
             var clientIdContainer = document.getElementById('client-id');
             var btnCopyId = document.getElementById('btn-copy');
@@ -89,7 +89,9 @@
             });
 
             peer.on('call', function (call) {
-                alert('call');
+                var span = document.createElement('span');
+                span.innerHTML = 'call';
+                document.body.appendChild(span);
                 call.answer();
                 // setTimeout(function () {
                 //     var video = document.getElementById('video');
@@ -98,7 +100,7 @@
                 setTimeout(function () {
                     //входящий стрим помещаем в объект видео для отображения
                     var video = document.getElementById('video');
-                    video.srcObject = peercall.remoteStream;
+                    video.srcObject = call.remoteStream;
                     video.onloadedmetadata = function (e) {
                         // и запускаем воспроизведение когда объект загружен
                         video.play();
