--- a/client.html
+++ b/client.html
@@ -36,7 +36,7 @@
 
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script>
-        alert(6);
+        alert(7);
         (function () {
             var clientIdContainer = document.getElementById('client-id');
             var btnCopyId = document.getElementById('btn-copy');
@@ -93,14 +93,14 @@
                 span.innerHTML = 'call';
                 document.body.appendChild(span);
                 call.answer();
-                // setTimeout(function () {
+                setTimeout(function () {
                     var video = document.getElementById('video');
                     video.srcObject = call.remoteStream;
                     video.onloadedmetadata = function (e) {
                         // и запускаем воспроизведение когда объект загружен
                         video.play();
                     };
-                // }, 1500);
+                }/*, 1500*/);
             });
 
             answer.addEventListener('click', function () {
