--- a/client.html
+++ b/client.html
@@ -20,6 +20,11 @@
         .video-container {
             margin-top: 2rem;
         }
+
+        #video {
+            max-width: 100%;
+            object-fit: contain;
+        }
     </style>
 </head>
 
@@ -36,7 +41,7 @@
 
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script>
-        alert(7);
+        alert(8);
         (function () {
             var clientIdContainer = document.getElementById('client-id');
             var btnCopyId = document.getElementById('btn-copy');
@@ -100,7 +105,7 @@
                         // и запускаем воспроизведение когда объект загружен
                         video.play();
                     };
-                }/*, 1500*/);
+                }, 1500);
             });
 
             answer.addEventListener('click', function () {
