--- a/client.html
+++ b/client.html
@@ -35,13 +35,13 @@
         <button id="btn-copy">Копировать id</button>
     </div>
     <div class="video-container">
-        <video id="video" controls autoplay muted playsinline></video>
+        <video id="video" controls></video>
     </div>
     <button id="answer">Принять</button>
 
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script>
-        alert(8);
+        document.body.insertAdjacentHTML('afterbegin', '<div>1</div>')
         (function () {
             var clientIdContainer = document.getElementById('client-id');
             var btnCopyId = document.getElementById('btn-copy');
@@ -102,7 +102,6 @@
                     var video = document.getElementById('video');
                     video.srcObject = call.remoteStream;
                     video.onloadedmetadata = function (e) {
-                        // и запускаем воспроизведение когда объект загружен
                         video.play();
                     };
                 }, 1500);
