--- a/consultant.html
+++ b/consultant.html
@@ -20,6 +20,11 @@
         .video-container {
             margin-top: 2rem;
         }
+
+        #video {
+            max-width: 100%;
+            object-fit: contain;
+        }
     </style>
 </head>
 
@@ -40,7 +45,7 @@
 
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script>
-        alert(8);
+        document.body.insertAdjacentHTML('afterbegin', '<div>1</div>')
         (function () {
             var inputId = document.getElementById('input-id');
             var btnCall = document.getElementById('btn-call');
