--- a/client.html
+++ b/client.html
@@ -35,13 +35,13 @@
         <button id="btn-copy">Копировать id</button>
     </div>
     <div class="video-container">
-        <video id="video" controls autoplay></video>
+        <video id="video" controls autoplay playsinline></video>
     </div>
     <button id="answer">Принять</button>
 
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script>
-        document.body.insertAdjacentHTML('afterbegin', '<div>2</div>');
+        document.body.insertAdjacentHTML('afterbegin', '<div>3</div>');
         (function () {
             var clientIdContainer = document.getElementById('client-id');
             var btnCopyId = document.getElementById('btn-copy');
